<resources>
    <string name="app_name">Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="gallery">Gallery</string>
    <string name="notifications">Notifications</string>
    <string name="first_fragment">First fragment</string>
    <string name="fifth_fragment">Fifth fragment</string>
    <string name="fourth_fragment">Fourth fragment</string>
    <string name="second_fragment">Second fragment</string>
    <string name="third_fragment">Third fragment</string>
    <string name="redirect">Redirect</string>
    <string name="return">Return</string>
    <string name="return_text">Return</string>
</resources>