<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_contacts_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/cart" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/baseline_photo_library_24"
        android:title="@string/gallery" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notifications" />
</menu>